--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,11 +2,11 @@
     <string name="app_name">Task</string>
 
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="timeout_error_message">Looks like the server is taking too long to respond, please try again in
         sometime
     </string>
     <string name="no_internet_connection">No Internet Connection</string>
     <string name="generic_unknown_error">Technical Issue Occurred</string>
     <string name="no_content_error">No Content</string>
+    <string name="no_image">No image</string>
 </resources>
